# A-Maize-ing

./: Makefile  a_maze_ing.py  config.txt  maze_result.txt
mazegen/: __init__.py  exceptions.py  generator.py  pyproject.toml
